--- a/OrderMenu.html
+++ b/OrderMenu.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="csspresentasi">
+	<link rel="stylesheet" type="text/css" href="OrderMenu.css">
 	<title>Order Menu</title>
 	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
