--- a/OrderMenu.html
+++ b/OrderMenu.html
@@ -14,56 +14,56 @@
 
 <div class="card-container">
 	<div class="card">
-		<img src="/Latihan/Images/rv.jpg">
+		<img src="Images/rv.jpg">
 		<div class="card-content">
 			<h1>Red Velvet</h1>
 			<p>Perpaduan antara chocolate putih premium dengan adonan cookie red velvet yang soft.</p>
 		</div>
 	</div>
 	<div class="card">
-		<img src="/Latihan/Images/peanut-butter-chocolate.jpg">
+		<img src="Images/peanut-butter-chocolate.jpg">
 		<div class="card-content">
 			<h1>Peanut Butter</h1>
 			<p>Adonan cookie yang soft dengan isian crem peanut butter dan toping kacang yang premium.</p>
 		</div>
 	</div>
 	<div class="card">
-		<img src="/Latihan/Images/SALTEDCARAMEL.jpg">
+		<img src="Images/SALTEDCARAMEL.jpg">
 		<div class="card-content">
 			<h1>Salted Caramel</h1>
 			<p>Adonan cookie yang soft dengan isian cream caramel yang manis.</p>
 		</div>
 	</div>
 	<div class="card">
-		<img src="/Latihan/Images/coklat.jpg">
+		<img src="Images/coklat.jpg">
 		<div class="card-content">
 			<h1>Choco</h1>
 			<p>Perpaduan antara chocolate premium dengan adonan cookie yang soft.</p>
 		</div>
 	</div>
 	<div class="card">
-		<img src="/Latihan/Images/Cheesecake.png">
+		<img src="Images/Cheesecake.png">
 		<div class="card-content">
 			<h1>Cheesecake</h1>
 			<p>Cookies dan cheesecake adalah kombinasi rasa manis dan asin yang terasa nikmat.</p>
 		</div>
 	</div>
 	<div class="card">
-		<img src="/Latihan/Images/sb.png">
+		<img src="Images/sb.png">
 		<div class="card-content">
 			<h1>Strawberry</h1>
 			<p>Segarnya buah Strawberry menjadi pelengkap lembutnya cookies.
 		</div>
 	</div>
 	<div class="card">
-		<img src="/Latihan/Images/banana.png">
+		<img src="Images/banana.png">
 		<div class="card-content">
 			<h1>Banana</h1>
 			<p>Manisnya pisang menjadi kombinasi yang pas dari lembutnya cookies.</p>
 		</div>
 	</div>
 	<div class="card">
-		<img src="/Latihan/Images/Almondchoco.png">
+		<img src="Images/Almondchoco.png">
 		<div class="card-content">
 			<h1>Almond Choco</h1>
 			<p>Manis dan gurihnya perpaduan coklat dan almond yang membuat cookies semakin terasa nikmat.</p>
