--- a/OrderMenu.html
+++ b/OrderMenu.html
@@ -49,7 +49,7 @@
 		</div>
 	</div>
 	<div class="card">
-		<img src="Images/sb.png">
+		<img src="Images/Sb.png">
 		<div class="card-content">
 			<h1>Strawberry</h1>
 			<p>Segarnya buah Strawberry menjadi pelengkap lembutnya cookies.
