--- a/OrderMenu.html
+++ b/OrderMenu.html
@@ -14,7 +14,7 @@
 
 <div class="card-container">
 	<div class="card">
-		<img src="Images/rv.jpg">
+		<img src="Images/RV.jpg">
 		<div class="card-content">
 			<h1>Red Velvet</h1>
 			<p>Perpaduan antara chocolate putih premium dengan adonan cookie red velvet yang soft.</p>
@@ -35,7 +35,7 @@
 		</div>
 	</div>
 	<div class="card">
-		<img src="Images/coklat.jpg">
+		<img src="Images/choco.jpg">
 		<div class="card-content">
 			<h1>Choco</h1>
 			<p>Perpaduan antara chocolate premium dengan adonan cookie yang soft.</p>
