--- a/OrderMenu.html
+++ b/OrderMenu.html
@@ -35,7 +35,7 @@
 		</div>
 	</div>
 	<div class="card">
-		<img src="Images/choco.jpg">
+		<img src="Images/choco.jpeg">
 		<div class="card-content">
 			<h1>Choco</h1>
 			<p>Perpaduan antara chocolate premium dengan adonan cookie yang soft.</p>
