--- a/OrderMenu.html
+++ b/OrderMenu.html
@@ -84,7 +84,7 @@
 	<input style="padding-right: 150px" type="text" id="iname" name="iname" value><br><br>
 	<label style="color: #8a795d; text-align: right; font-size: 17px" for="fname"><b>VARIANT</b></label><br>
 	<input style="padding-right: 150px" type="text" id="iname" name="iname" value><br><br>
-	<a href="#" onclick="alert('TERIMAKASIH ATAS ORDERANYA!')">SUBMIT</a>
+	<button onclick="alert('TERIMAKASIH ATAS ORDERANYA!')">SUBMIT</button>
 
 	<br>
 </form>
