--- a/OrderMenu.html
+++ b/OrderMenu.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="OrderMenu.css">
 	<title>Order Menu</title>
 	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-	<link rel="icon" type="image/x-icon" href="jookislogo.jpeg">
+	<link rel="icon" type="image/x-icon" href="jookislogo.ico.jpeg">
 </head>
 <body>
 	<marquee style="font-size:40px; color: #8a795d"; scroolamount="17" direction="right">
