--- a/aboutJookies.html
+++ b/aboutJookies.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>About Jookies</title>
-	<link rel="icon" type="image/x-icon" href="jookislogo.jpeg">
+	<link rel="icon" type="image/x-icon" href="jookislogo.ico.jpeg">
 </head>
 <body>
 
